--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World>h1>
-<p>I'm hosted with Github Pages.</p>
+<h1>Hello World<h1>
+<p>This webpage is under development.
+   Please try to be patient during this time. </p>
 </body>
 </html>
