--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <body>
   <header>
     <center>
-      <h1>Hello, I'm Alec Trusty</h1>
+      <h1>Welcome...to alectrusty.com</h1>
       </div>
       </div>
     </center>
-    <hr width="100%" size="6" color="fff">
+    <hr width="100%" size="15" color="fff">
   </header>
   <main>
     <center>
-      <p>Try'na figure out this website business</p>
-      <img src="bchs.jpg" width="100%">
+      <p>Please be patient while I build this site</p>
+      <p>Regards,</p>
+      <p>Alec Trusty</p>
+      <img src="al.jpg" width="100%">
       <p>Guh'bye</p>
     </center>
   </main>
