--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>Please be patient while I build this site</p>
       <p>Regards,</p>
       <p>Alec Trusty</p>
-      <a href="https://outofdodgepdx.bandcamp.com/" title="Bandcamp" target="_blank"></a>
+      <a href="https://outofdodgepdx.bandcamp.com/" title="Bandcamp" target="_blank"><img src="img/al.jpg" width="75%"></a>
       <p>Guh'bye</p>
     </center>
   </main>
