--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <header>
     <center>
-      <h1>Welcome...to alectrusty.com</h1>
+      <h1>THIS IS THE WEBSITE OF ALEC TRUSTY</h1>
       </div>
       </div>
     </center>
-    <hr width="100%" size="15" color="fff">
+    <hr width="100%" size="25" color="fff">
   </header>
   <main>
     <center>
