--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE HTML5>
 
-<html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/siimple.css">
+</head>
+
 <body>
   <header>
     <center>
       <h1>THIS IS THE WEBSITE OF ALEC TRUSTY</h1>
     <hr width="100%" size="25" color="fff">
+    </center>
   </header>
   <main>
     <center>
