--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
     </center>
   </header>
   <main>
-    <center>
-      <p>Please be patient while I build this site</p>
+      <p>Please be patient while I build this site.  I am currently developing my web development skills.</p>
       <p>Regards,</p>
       <p>Alec Trusty</p>
       <a href="https://outofdodgepdx.bandcamp.com/" title="Bandcamp" target="_blank"><img src="img/bchs.jpg" width="75%"></a>
       <p>Guh'bye</p>
-    </center>
   </main>
 </body>
