--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    
+  </head>   
+    <body>
+  <header>
+    <center>
+      <h1>Hello, I'm Alec Trusty</h1>  
+    </center>
+    <hr width="100%" size="6" color="fff">
+  </header>
+  <main>
+    <center>
+      <p>Try'na figure out this website business</p>
+      <img src="bchs.jpg" width="100%">
+      <p>Guh'bye</p>
+    </center>
+  </main>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
