--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
         </div>
       </div>
     </section>
+    
+     <!-- Portfolio Section -->
+    <section id="about" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Portfolio</h2>
+            <p>Under Construction</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Download Section -->
     <section id="download" class="download-section content-section text-center">
