--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">You Betcha'!</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Alec Trusty</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -56,7 +56,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Alec Trusty</h1>
-              <p class="intro-text">Budding Geospatial Data Scientist.
+              <p class="intro-text">GIS | Cartography | Data Analysis | Research
                 <br>Don't be shy, come on in!.</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
@@ -73,9 +73,9 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About Me</h2>
-            <p>This will have more on me... me me me!</p>
-            <p>I will have more for y'all very soon!</p>
-            <p>ME ME ME</p>
+            <p>I'm a recent graduate of Environmental Science & Management at Portland State University</p>
+            <p>This webpage is under construction.</p>
+            <p>Check back soon.</p>
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Portfolio</h2>
-            <p>Under Construction</p>
+            <p>Under Construction...</p>
           </div>
         </div>
       </div>
