--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">My Work</a>
             </li>
             <li class="nav-item">
@@ -57,7 +60,6 @@
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Alec Trusty</h1>
               <p class="intro-text">GIS | Cartography | Data Analysis | Research
-                <br>Don't be shy, come on in!.</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -82,7 +84,7 @@
     </section>
     
      <!-- Portfolio Section -->
-    <section id="about" class="content-section text-center">
+    <section id="portfolio" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
