--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             <p>Feel free to slip around and push my buttons!</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                <a href="https://twitter.com/TrustyAlec" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Tweeeeter (Don't have one...)</span>
+                  <span class="network-name">Tweeter</span>
                 </a>
               </li>
               <li class="list-inline-item">
