--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>Come see what i've done!</h2>
           <p>I've got some things in the works...</p>
-          <a href="https://github.com/alectrusty/BS4_TableScrape">Jump on in, maybe splash around a bit ;)</a>
+          <a href="http://www.alectrusty.com/Tutorials">Jump on in, maybe splash around a bit ;)</a>
         </div>
       </div>
     </section>
