--- a/Tutorials.html
+++ b/Tutorials.html
@@ -53,6 +53,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Tutorials</h2>
             <p>Some markdown and jupyter examples of my knowledge of Programming and Data Science</p>
+            <a href="http://www.alectrusty.com/Scrape1">| Python Web Scraping with BeautifulSoup</a>
           </div>
         </div>
       </div>
