--- a/Tutorials.html
+++ b/Tutorials.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="http://www.alectrusty.com/">About</a>
+              <a class="nav-link js-scroll-trigger" href="http://www.alectrusty.com/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#tutorials">Tutorials</a>
@@ -52,8 +52,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Tutorials</h2>
-            <p>Some markdown and jupyter examples of my knowledge of Programming and Data Science</p>
-            <a href="http://www.alectrusty.com/Scrape1">| Python Web Scraping with BeautifulSoup</a>
+            <p>Some markdown and jupyter examples of my knowledge of Programming and Data Science </p>
+            <a href="http://www.alectrusty.com/Scrape1">| Python Web Scraping with BeautifulSoup |</a>
           </div>
         </div>
       </div>
