--- a/Tutorials.html
+++ b/Tutorials.html
@@ -45,12 +45,13 @@
         </div>
       </div>
     </nav>
-
-    <!-- Tutorials Page -->
-    <section id="tutorials" class="content-section text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
+    
+    <!-- Intro Header -->
+    <header class="masthead">
+      <div class="intro-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
             <h2>Tutorials</h2>
             <p>Some markdown and jupyter examples of my knowledge of Programming and Data Science </p>
             <a href="http://www.alectrusty.com/Scrape1">| Python Web Scraping with BeautifulSoup |</a>
