--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <p>Feel free to slip around and push my buttons!</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/TrustyAlec" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
+                <a href="https://www.linkedin.com/in/alec-trusty-30220b109/" class="btn btn-default btn-lg">
+                  <i class="fa fa-linkedin fa-fw"></i>
                   <span class="network-name">Tweeter</span>
                 </a>
               </li>
