--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/alec-trusty-30220b109/" class="btn btn-default btn-lg">
                   <i class="fa fa-linkedin fa-fw"></i>
-                  <span class="network-name">Tweeter</span>
+                  <span class="network-name">Linkedin</span>
                 </a>
               </li>
               <li class="list-inline-item">
