--- a/Tutorials.html
+++ b/Tutorials.html
@@ -53,8 +53,10 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
             <h2>Tutorials</h2>
-            <p>Some markdown and jupyter examples of my knowledge of Programming and Data Science </p>
+            <p>Python || Webscraping</p>
             <a href="http://www.alectrusty.com/Scrape1">| Python Web Scraping with BeautifulSoup |</a>
+            <p>GIS || Cartography</p>
+            <a href="http://pdxedu.maps.arcgis.com/apps/Cascade/index.html?appid=eced9a85fa9d40ffa1a73c12f694c49c">| ESRI Story Map: Protecting Arctic Marine Ecosystems |</a>
           </div>
         </div>
       </div>
