--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Alec Trusty</h1>
-              <p>  </p>
+              <style type="text/css">
+              <!--
+              .tab { margin-left: 40px; }
+               -->
+              </style>
               <p class="intro-text">GIS | Cartography | Data Analysis | Research </p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
