--- a/Tutorials.html
+++ b/Tutorials.html
@@ -39,7 +39,7 @@
               <a class="nav-link js-scroll-trigger" href="http://www.alectrusty.com/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#tutorials">Tutorials</a>
+              <a class="nav-link js-scroll-trigger" href="#tutorials">Side Stuff</a>
             </li>
           </ul>
         </div>
@@ -52,7 +52,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-            <h2>Tutorials</h2>
+            <h2>Side Stuff</h2>
             <p>Python || Webscraping</p>
             <a href="http://www.alectrusty.com/Scrape1">| Python Web Scraping with BeautifulSoup |</a>
             <p> </p>
