--- a/Tutorials.html
+++ b/Tutorials.html
@@ -59,7 +59,7 @@
             <p>GIS || Cartography</p>
             <a href="http://pdxedu.maps.arcgis.com/apps/Cascade/index.html?appid=eced9a85fa9d40ffa1a73c12f694c49c">| ESRI Story Map: Protecting Arctic Marine Ecosystems |</a>
             <p> </p>
-            <a href="www.alectrusty.com/Nickface">| A map of Nick freaking Cage faces all over Oregon |</a>
+            <a href="http://www.alectrusty.com/Nickface">| A map of Nick freaking Cage faces all over Oregon |</a>
           </div>
         </div>
       </div>
