--- a/Tutorials.html
+++ b/Tutorials.html
@@ -53,7 +53,9 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
             <h2>Side Stuff</h2>
-            <p>Python || Webscraping</p>
+            <p>Python & R || Webscraping</p>
+            <p> </p>
+            <a href="https://github.com/alectrusty/YellowSpider">| Create a DataFrame from Yellow Pages Text: rvest |</a>
             <a href="http://www.alectrusty.com/Scrape1">| Python Web Scraping with BeautifulSoup |</a>
             <p> </p>
             <p>GIS || Cartography</p>
