--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Alec Trusty - Portfolio</title>
+    <title>Alec Trusty || GIS Analyst</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#maps">Hall Of Maps</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">My Work</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfoilio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -80,33 +80,34 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About Me</h2>
-            <p>I'm a recent graduate of Environmental Science & Management at Portland State University</p>
-            <p>This webpage is under construction.</p>
-            <p>Check back soon.</p>
+            <p>Welcome to my professional website & portfolio! Currently, I work as a Data & Research Analyst out of Portland, Oregon, U.S.
+               I specialize in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.</p>
+            <p>When i'm not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.</p>
+            <p>This website is still under construction... Feel free to snoop around and find what you can, otherwise check back soon.</p>
           </div>
         </div>
       </div>
     </section>
     
-     <!-- Portfolio Section -->
-    <section id="portfolio" class="content-section text-center">
+     <!-- Hall of Maps Section -->
+    <section id="maps" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Portfolio</h2>
+            <h2>Hall of Maps</h2>
             <p>Under Construction...</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- Portfolio Section -->
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Come see what i've done!</h2>
-          <p>I've got some things in the works...</p>
-          <a href="http://www.alectrusty.com/Tutorials">Jump on in, maybe splash around a bit ;)</a>
+          <h2>Portfolio</h2>
+          <p>Feel free to browse some of my work.</p>
+          <a href="http://www.alectrusty.com/Tutorials">Projects & Side Stuff </a>
         </div>
       </div>
     </section>
@@ -116,8 +117,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Gimme a buzz, would'ja?</h2>
-            <p>Feel free to slip around and push my buttons!</p>
+            <h2>Gimme a buzz.?</h2>
+            <p></p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/alec-trusty-30220b109/" class="btn btn-default btn-lg">
@@ -132,9 +133,9 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="http://pdxedu.maps.arcgis.com/apps/Cascade/index.html?appid=eced9a85fa9d40ffa1a73c12f694c49c" class="btn btn-default btn-lg">
+                <a href="https://plus.google.com/u/0/117276707697963042205" class="btn btn-default btn-lg">
                   <i class="fa fa-google-plus fa-fw"></i>
-                  <span class="network-name">Arctic</span>
+                  <span class="network-name">Google+</span>
                 </a>
               </li>
             </ul>
