--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               .tab { margin-left: 40px; }
                -->
               </style>
-              <p class="intro-text">GIS | Cartography | Data Analysis | Research </p>
+              <p class="intro-text">GIS | Cartography | Analytics | Research </p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -102,12 +102,12 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="download" class="download-section content-section text-center">
+    <section id="portfolio" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Portfolio</h2>
           <p>Feel free to browse some of my work.</p>
-          <a href="http://www.alectrusty.com/Tutorials">Projects & Side Stuff </a>
+          <a href="http://www.alectrusty.com/Tutorials">Projects & Side Stuff</a>
         </div>
       </div>
     </section>
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Gimme a buzz.?</h2>
+            <h2>Gimme a buzz.</h2>
             <p></p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
