--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link js-scroll-trigger" href="#maps">Hall Of Maps</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfoilio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
