--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Alec Trusty || GIS Analyst</title>
+    <title>{ Alec Trusty || GIS Analyst }</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
               .tab { margin-left: 40px; }
                -->
               </style>
-              <p class="intro-text">GIS | Cartography | Analytics | Research </p>
+              <p class="intro-text">{ GIS | Cartography | Analytics | Research }</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
