--- a/Tutorials.html
+++ b/Tutorials.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Alec Trusty - Portfolio</title>
+    <title>{ Alec Trusty || GIS Analyst }</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="http://www.alectrusty.com/">Alec Trusty</a>
+        <a class="navbar-brand js-scroll-trigger" href="http://www.alectrusty.com/">{ Alec Trusty }</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -52,7 +52,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-            <h2>Side Stuff</h2>
+            <h2 { >Side Stuff }</h2>
             <p>Python & R || Webscraping</p>
             <p> </p>
             <a href="https://github.com/alectrusty/YellowSpider">| Create a DataFrame from Yellow Pages Text: rvest |</a>
