--- a/Tutorials.html
+++ b/Tutorials.html
@@ -52,7 +52,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-            <h2 { >Side Stuff }</h2>
+            <h2>{ Side Stuff }</h2>
             <p>Python & R || Webscraping</p>
             <p> </p>
             <a href="https://github.com/alectrusty/YellowSpider">| Create a DataFrame from Yellow Pages Text: rvest |</a>
