--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>{ About Me }</h2>
+            <h2>About Me</h2>
             <p>Welcome to my professional website & portfolio! Currently, I work as a Data & Research Analyst out of Portland, Oregon, U.S.
                I specialize in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.</p>
             <p>When i'm not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.</p>
@@ -94,7 +94,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>{ Hall of Maps }</h2>
+            <h2>Hall of Maps</h2>
             <p>Under Construction...</p>
           </div>
         </div>
@@ -105,7 +105,7 @@
     <section id="portfolio" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>{ Portfolio }</h2>
+          <h2>Portfolio</h2>
           <p>Feel free to browse some of my work.</p>
           <a href="http://www.alectrusty.com/Tutorials">Projects & Side Stuff</a>
         </div>
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>{ Gimme a buzz }</h2>
+            <h2>Gimme a buzz</h2>
             <p></p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
