--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               .tab { margin-left: 40px; }
                -->
               </style>
-              <p class="intro-text">{ GIS | Cartography | Analytics | Research }</p>
+              <p class="intro-text">{ GIS | Data Analytics | Research }</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
