--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="about.html">EDS</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
@@ -205,9 +205,10 @@ $(document).ready(function () {
 </div>
 
 
-<p>Welcome to my professional website &amp; portfolio! Currently, I work as a Data &amp; Research Analyst out of Portland, Oregon, U.S. I specialize in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.</p>
+<p><em>Welcome.</em><br />
+I work as a Data &amp; Research Analyst out of Portland, Oregon, U.S. I specialize in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.</p>
 <p>When i’m not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.</p>
-<p>This website is still under construction… Feel free to snoop around and find what you can, otherwise check back soon.</p>
+<p>This website is still under construction, but feel free to look around, you might be surprised by what you find!</p>
 
 
 
