--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="about.html">EDS</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
@@ -205,22 +205,11 @@ $(document).ready(function () {
 </div>
 
 
-<p>Here are some examples of projects of mine!</p>
 <div id="arctic-story-map" class="section level2">
 <h2><a href="http://pdxedu.maps.arcgis.com/apps/Cascade/index.html?appid=eced9a85fa9d40ffa1a73c12f694c49c">Arctic Story Map</a></h2>
-<ul>
-<li>An RMarkdown presentation on the common mistakes made in visualization and how to fix them.</li>
-<li>Includes a github repo for access to all the code.</li>
-<li>Look at how high quality my work is, hire and or collaborate with me.</li>
-</ul>
 </div>
 <div id="webscraped-data-in-a-web-map" class="section level2">
 <h2><a href="http://www.alectrusty.com/pdx_openlate.html">WebScraped Data in a Web Map</a></h2>
-<ul>
-<li>Web Scraping</li>
-<li>Data Cleaning</li>
-<li>Spatial Data Creation</li>
-</ul>
 </div>
 
 
