--- a/README.html
+++ b/README.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="about.html">EDS</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
