--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About</title>
+<title>EDS</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="about.html">EDS</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
@@ -200,12 +200,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">EDS</h1>
 
 </div>
 
 
-<p>Hey! My name is Alec Trusty. I am an aspiring Environmental Data Scientist.</p>
+<p>Check back soon.</p>
 
 
 
