--- a/cv.html
+++ b/cv.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="about.html">EDS</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
@@ -205,7 +205,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Soon this will have my professional CV or Resume…</p>
+<p>Check back soon.</p>
 
 
 
