--- a/projects.html
+++ b/projects.html
@@ -211,6 +211,9 @@ $(document).ready(function () {
 <div id="webscraped-data-in-a-web-map" class="section level2">
 <h2><a href="http://www.alectrusty.com/pdx_openlate.html">WebScraped Data in a Web Map</a></h2>
 </div>
+<div id="working-spatial-regression" class="section level2">
+<h2><a href="http://www.alectrusty.com/spreg3.html">Working Spatial Regression</a></h2>
+</div>
 
 
 
