Added Contact section

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 
-<title>EDS</title>
+<title>Contact</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -200,16 +200,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">EDS</h1>
+<h1 class="title toc-ignore">Contact</h1>
 
 </div>
 
 
-<p>Check back soon.</p>
-<div class="figure">
-<img src="img/guy.jpg" />
-
-</div>
+<p>Email I: <a href="mailto:atrusty@pdx.edu">atrusty@pdx.edu</a> Email II: <a href="mailto:a.e.trusty@gmail.com">a.e.trusty@gmail.com</a></p>
 
 
 
