--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Email I: <a href="mailto:atrusty@pdx.edu">atrusty@pdx.edu</a> Email II: <a href="mailto:a.e.trusty@gmail.com">a.e.trusty@gmail.com</a></p>
+<p>Email I: <a href="mailto:atrusty@pdx.edu">atrusty@pdx.edu</a> Email II: <a href="mailto:a.e.trusty@gmail.com">a.e.trusty@gmail.com</a> <a href="https://www.linkedin.com/in/alec-trusty-30220b109/">Linkedin</a> <a href="http://www.github.com/alectrusty">Github</a></p>
 
 
 
