--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Alec Trusty, B.S.</title>
+<title>Alec Trusty</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -200,15 +200,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Alec Trusty, B.S.</h1>
+<h1 class="title toc-ignore">Alec Trusty</h1>
 
 </div>
 
 
-<p><em>Welcome.</em><br />
-I work as a Data &amp; Research Analyst out of Portland, Oregon, U.S. I specialize in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.</p>
-<p>When i’m not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.</p>
-<p>This website is still under construction, but feel free to look around, you might be surprised by what you find!</p>
+<div id="gis-spatial-analytics-research" class="section level1">
+<h1>GIS | SPATIAL ANALYTICS | RESEARCH</h1>
+</div>
 
 
 
