--- a/projects.html
+++ b/projects.html
@@ -205,14 +205,26 @@ $(document).ready(function () {
 </div>
 
 
-<div id="arctic-story-map" class="section level2">
-<h2><a href="http://pdxedu.maps.arcgis.com/apps/Cascade/index.html?appid=eced9a85fa9d40ffa1a73c12f694c49c">Arctic Story Map</a></h2>
+<div id="web-mapping" class="section level2">
+<h2>Web Mapping</h2>
+<div id="arctic-story-map" class="section level4">
+<h4><a href="http://pdxedu.maps.arcgis.com/apps/Cascade/index.html?appid=eced9a85fa9d40ffa1a73c12f694c49c">Arctic Story Map</a></h4>
 </div>
-<div id="webscraped-data-in-a-web-map" class="section level2">
-<h2><a href="http://www.alectrusty.com/pdx_openlate.html">WebScraped Data in a Web Map</a></h2>
+<div id="scraped-yelp-data-webmap" class="section level4">
+<h4><a href="http://www.alectrusty.com/nl.html">Scraped Yelp Data: Webmap</a></h4>
 </div>
-<div id="working-spatial-regression" class="section level2">
-<h2><a href="http://www.alectrusty.com/spreg3.html">Working Spatial Regression</a></h2>
+</div>
+<div id="web-scraping" class="section level2">
+<h2>Web Scraping</h2>
+<div id="spatializing-yelp-businesses" class="section level4">
+<h4><a href="http://www.alectrusty.com/">Spatializing Yelp Businesses</a></h4>
+</div>
+</div>
+<div id="research" class="section level2">
+<h2>Research</h2>
+<div id="portland-energy-expenditure-research" class="section level4">
+<h4><a href="http://www.alectrusty.com/expr.html">Portland Energy Expenditure Research</a></h4>
+</div>
 </div>
 
 
