--- a/README.html
+++ b/README.html
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Alec Trusty, B.S.</a>
+      <a class="navbar-brand" href="index.html">Alec Trusty</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">EDS</a>
+  <a href="about.html">About</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
