--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Alec Trusty, B.S.</a>
+      <a class="navbar-brand" href="index.html">Alec Trusty</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">EDS</a>
+  <a href="about.html">About</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
@@ -205,7 +205,18 @@ $(document).ready(function () {
 </div>
 
 
-<p>Email I: <a href="mailto:atrusty@pdx.edu">atrusty@pdx.edu</a> Email II: <a href="mailto:a.e.trusty@gmail.com">a.e.trusty@gmail.com</a> <a href="https://www.linkedin.com/in/alec-trusty-30220b109/">Linkedin</a> <a href="http://www.github.com/alectrusty">Github</a></p>
+<div id="email-i-atrustypdx.edu" class="section level4">
+<h4>Email I: <a href="mailto:atrusty@pdx.edu">atrusty@pdx.edu</a></h4>
+</div>
+<div id="email-ii-a.e.trustygmail.com" class="section level4">
+<h4>Email II: <a href="mailto:a.e.trusty@gmail.com">a.e.trusty@gmail.com</a></h4>
+</div>
+<div id="linkedin" class="section level4">
+<h4><a href="https://www.linkedin.com/in/alec-trusty-30220b109/">Linkedin</a></h4>
+<div id="github" class="section level5">
+<h5><a href="http://www.github.com/alectrusty">Github</a></h5>
+</div>
+</div>
 
 
 
