--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Alec Trusty</title>
+<title>ALEC TRUSTY, B.S.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Alec Trusty, B.S.</a>
+      <a class="navbar-brand" href="index.html">Alec Trusty</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">EDS</a>
+  <a href="about.html">About</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
@@ -200,7 +200,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Alec Trusty</h1>
+<h1 class="title toc-ignore">ALEC TRUSTY, B.S.</h1>
 
 </div>
 
