--- a/projects.html
+++ b/projects.html
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Alec Trusty, B.S.</a>
+      <a class="navbar-brand" href="index.html">Alec Trusty</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">EDS</a>
+  <a href="about.html">About</a>
 </li>
 <li>
   <a href="projects.html">Projects</a>
@@ -217,7 +217,7 @@ $(document).ready(function () {
 <div id="web-scraping" class="section level2">
 <h2>Web Scraping</h2>
 <div id="spatializing-yelp-businesses" class="section level4">
-<h4><a href="http://www.alectrusty.com/">Spatializing Yelp Businesses</a></h4>
+<h4><a href="http://www.alectrusty.com/yelpscrape.html">Spatializing Yelp Businesses</a></h4>
 </div>
 </div>
 <div id="research" class="section level2">
