--- a/projects.html
+++ b/projects.html
@@ -220,8 +220,8 @@ $(document).ready(function () {
 <h4><a href="http://www.alectrusty.com/projects/yelpscrape.html">Spatializing Yelp Businesses</a></h4>
 </div>
 </div>
-<div id="research" class="section level2">
-<h2>Research</h2>
+<div id="research-statistics" class="section level2">
+<h2>Research &amp; Statistics</h2>
 <div id="portland-energy-expenditure-research" class="section level4">
 <h4><a href="http://www.alectrusty.com/projects/expr.html">Portland Energy Expenditure Research</a></h4>
 </div>
