--- a/projects.html
+++ b/projects.html
@@ -219,6 +219,9 @@ $(document).ready(function () {
 <div id="spatializing-yelp-businesses" class="section level4">
 <h4><a href="http://www.alectrusty.com/projects/yelpscrape.html">Spatializing Yelp Businesses</a></h4>
 </div>
+<div id="scraping-tables-with-python" class="section level4">
+<h4><a href="http://www.alectrusty.com/projects/scrape1.html">Scraping Tables with Python</a></h4>
+</div>
 </div>
 <div id="research-statistics" class="section level2">
 <h2>Research &amp; Statistics</h2>
