--- a/projects.html
+++ b/projects.html
@@ -228,6 +228,9 @@ $(document).ready(function () {
 <div id="portland-energy-expenditure-research" class="section level4">
 <h4><a href="http://www.alectrusty.com/projects/expr.html">Portland Energy Expenditure Research</a></h4>
 </div>
+<div id="landscape-influences-on-water-quality-esm-567" class="section level4">
+<h4><a href="http://www.alectrusty.com/projects/rda.html">Landscape Influences on Water Quality (ESM 567)</a></h4>
+</div>
 </div>
 
 
