--- a/projects.html
+++ b/projects.html
@@ -211,25 +211,25 @@ $(document).ready(function () {
 <h4><a href="http://pdxedu.maps.arcgis.com/apps/Cascade/index.html?appid=eced9a85fa9d40ffa1a73c12f694c49c">Arctic Story Map</a></h4>
 </div>
 <div id="scraped-yelp-data-webmap" class="section level4">
-<h4><a href="http://www.alectrusty.com/projects/nl.html">Scraped Yelp Data: Webmap</a></h4>
+<h4><a href="http://www.alectrusty.com/projects/nl">Scraped Yelp Data: Webmap</a></h4>
 </div>
 </div>
 <div id="web-scraping" class="section level2">
 <h2>Web Scraping</h2>
 <div id="spatializing-yelp-businesses" class="section level4">
-<h4><a href="http://www.alectrusty.com/projects/yelpscrape.html">Spatializing Yelp Businesses</a></h4>
+<h4><a href="http://www.alectrusty.com/projects/yelpscrape">Spatializing Yelp Businesses</a></h4>
 </div>
 <div id="scraping-tables-with-python" class="section level4">
-<h4><a href="http://www.alectrusty.com/projects/scrape1.html">Scraping Tables with Python</a></h4>
+<h4><a href="http://www.alectrusty.com/projects/scrape1">Scraping Tables with Python</a></h4>
 </div>
 </div>
 <div id="research-statistics" class="section level2">
 <h2>Research &amp; Statistics</h2>
 <div id="portland-energy-expenditure-research" class="section level4">
-<h4><a href="http://www.alectrusty.com/projects/expr.html">Portland Energy Expenditure Research</a></h4>
+<h4><a href="http://www.alectrusty.com/projects/expr">Portland Energy Expenditure Research</a></h4>
 </div>
 <div id="landscape-influences-on-water-quality-esm-567" class="section level4">
-<h4><a href="http://www.alectrusty.com/projects/rda.html">Landscape Influences on Water Quality (ESM 567)</a></h4>
+<h4><a href="http://www.alectrusty.com/projects/rda">Landscape Influences on Water Quality (ESM 567)</a></h4>
 </div>
 </div>
 
