--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@ $(document).ready(function () {
 
 <div id="gis-spatial-analytics-research" class="section level1">
 <h1>GIS | SPATIAL ANALYTICS | RESEARCH</h1>
+<p>Approaching big data solutions to social and environmental sustainability with cutting-edge <a href="https://en.wikipedia.org/wiki/Geographic_information_system">GIS</a> and <a href="https://en.wikipedia.org/wiki/Data_science">data science</a> techniques, with a focus on <a href="https://en.wikipedia.org/wiki/Open-source_software">open source</a> software for ensuring reproducibility of analytical methods.</p>
+<p>I consider myself an Environmental Data Scientist in training, but I have over two years of project based experience with the <a href="https://www.pdx.edu/geography/center-for-spatial-analysis-research-csar">Center for Spatial Analysis &amp; Research</a> and the <a href="http://www.suprlab.org/">Sustaining Urban Places Research Lab</a></p>
 </div>
 
 
