--- a/projects.html
+++ b/projects.html
@@ -205,6 +205,7 @@ $(document).ready(function () {
 </div>
 
 
+<p>This is essentially my file cabinet for documents that are most relevant to my profession. More to come soon…</p>
 <div id="web-mapping" class="section level2">
 <h2>Web Mapping</h2>
 <div id="arctic-story-map" class="section level4">
@@ -231,6 +232,10 @@ $(document).ready(function () {
 <div id="landscape-influences-on-water-quality-esm-567" class="section level4">
 <h4><a href="http://www.alectrusty.com/projects/rda">Landscape Influences on Water Quality (ESM 567)</a></h4>
 </div>
+</div>
+<div id="map-gallery" class="section level2">
+<h2>Map Gallery</h2>
+<p>Coming soon…</p>
 </div>
 
 
