--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@ $(document).ready(function () {
 <p>I work as a Data &amp; Research Analyst out of Portland, Oregon, U.S. My specialty is in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.</p>
 <p>When i’m not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.</p>
 <div class="figure">
-<img src="img/guy.jpg" />
+<img src="img/me.jpg" />
 
 </div>
 
