--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@ $(document).ready(function () {
 <p>I consider myself an Environmental Data Scientist in training, but I have over two years of project-based experience with the <a href="https://www.pdx.edu/geography/center-for-spatial-analysis-research-csar">Center for Spatial Analysis &amp; Research</a> and the <a href="http://www.suprlab.org/">Sustaining Urban Places Research Lab</a>.</p>
 <p>This website is a work in progress and will have more content soon, but feel free to explore my <a href="http://www.alectrusty.com/projects">work</a> and <a href="http://www.alectrusty.com/contact">contact</a> me with any questions or inquries. I am currently available for GIS &amp; data consulting services and would love to connect.</p>
 <p>-Alec</p>
+<p><img src="img/pop.jpg" /> <em>Source: spatial.ly</em></p>
 </div>
 
 
