added terminal icon

--- a/public/index.html
+++ b/public/index.html
@@ -418,8 +418,8 @@
     
   
   <div class="col-md-4">
-    <div class="featurette-icon"><i class="fas fa-linux"></i></div>
-    <h3>Open Source</h3>
+    <div class="featurette-icon"><i class="fas fa-terminal"></i></div>
+    <h3>Computers, man.</h3>
     
   </div>
   
