Fixed stupid clothing-search.md bug

--- a/public/publication/clothing-search/index.html
+++ b/public/publication/clothing-search/index.html
@@ -363,11 +363,9 @@
 
 
 
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/project/arctic-story-map/">
-    Project
-  </a>
-  
+<a class="btn btn-outline-primary my-1 mr-1" href="/#" target="_blank" rel="noopener">
+  Project
+</a>
 
 
 
