--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -344,11 +344,9 @@
 
 
 
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/arctic-story-map/">
-    Project
-  </a>
-  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/#" target="_blank" rel="noopener">
+  Project
+</a>
 
 
 
