--- a/public/index.html
+++ b/public/index.html
@@ -321,11 +321,11 @@
 
     
 
-<h1 id="hi-i-m-alec">Hi, I&rsquo;m Alec.</h1>
+<h2 id="hi-i-m-alec">Hi, I&rsquo;m Alec.</h2>
 
-<p>Approaching data solutions to social and environmental sustainability issues with cutting-edge <a href="https://en.wikipedia.org/wiki/Geographic_information_system" target="_blank">GIS</a> and <a href="https://en.wikipedia.org/wiki/Data_science" target="_blank">data science</a> techniques, with a focus on <a href="https://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> software for ensuring reproducibility in my analytical methods.</p>
+<p>I&rsquo;m interested in applications of spatial predictive analytics within the realms of natural resource management, carbon economics, and environmental sustainability. I have an educational background in Environmental Science, three years experience in applied GIS, and in more recent years developed a savviness in programmatic data analysis and an interest in the data science framework.</p>
 
-<p>I consider myself an Environmental Data Scientist in training, but I have over two years of project-based experience with the <a href="https://www.pdx.edu/geography/center-for-spatial-analysis-research-csar" target="_blank">Center for Spatial Analysis &amp; Research</a> and the <a href="http://www.suprlab.org/" target="_blank">Sustaining Urban Places Research Lab</a>.</p>
+<p>I consider myself an Environmental Data Scientist in training, but I have over two years of project-based experience with the <a href="https://www.pdx.edu/geography/center-for-spatial-analysis-research-csar" target="_blank">Center for Spatial Analysis &amp; Research</a> and the <a href="http://www.suprlab.org/" target="_blank">Sustaining Urban Places Research Lab</a>. I&rsquo;m currently offering GIS &amp; data services as an independent contractor.</p>
 
 
     <div class="row">
