--- a/public/talk/example-talk/index.html
+++ b/public/talk/example-talk/index.html
@@ -78,8 +78,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -93,9 +93,9 @@
   <meta property="twitter:site" content="@alec_trusty">
   <meta property="twitter:creator" content="@alec_trusty">
   
-  <meta property="og:site_name" content="Alec Trusty">
+  <meta property="og:site_name" content="{ Alec Trusty }">
   <meta property="og:url" content="/talk/example-talk/">
-  <meta property="og:title" content="Example Talk | Alec Trusty">
+  <meta property="og:title" content="Example Talk | { Alec Trusty }">
   <meta property="og:description" content="Click on the Slides button above to view the built-in slides feature.
  Slides can be added in a few ways:
  Create slides using Academic&rsquo;s Slides feature and link using url_slides parameter in the front matter of the talk file Upload an existing slide deck to static/ and link using url_slides parameter in the front matter of the talk file Embed your slides (e.g. Google Slides) or presentation video on this page using shortcodes.">
@@ -114,7 +114,7 @@
 
   
 
-  <title>Example Talk | Alec Trusty</title>
+  <title>Example Talk | { Alec Trusty }</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
@@ -123,7 +123,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">Alec Trusty</a>
+      <a class="navbar-brand" href="/">{ Alec Trusty }</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
