--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -69,8 +69,8 @@
   
 
   
-  <link rel="alternate" href="/talk/index.xml" type="application/rss+xml" title="Alec Trusty">
-  <link rel="feed" href="/talk/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="alternate" href="/talk/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
+  <link rel="feed" href="/talk/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -84,9 +84,9 @@
   <meta property="twitter:site" content="@alec_trusty">
   <meta property="twitter:creator" content="@alec_trusty">
   
-  <meta property="og:site_name" content="Alec Trusty">
+  <meta property="og:site_name" content="{ Alec Trusty }">
   <meta property="og:url" content="/talk/">
-  <meta property="og:title" content="Recent &amp; Upcoming Talks | Alec Trusty">
+  <meta property="og:title" content="Recent &amp; Upcoming Talks | { Alec Trusty }">
   <meta property="og:description" content="Alec Trusty | Environmental Data Scientist">
   
   
@@ -101,7 +101,7 @@
 
   
 
-  <title>Recent &amp; Upcoming Talks | Alec Trusty</title>
+  <title>Recent &amp; Upcoming Talks | { Alec Trusty }</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
@@ -110,7 +110,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">Alec Trusty</a>
+      <a class="navbar-brand" href="/">{ Alec Trusty }</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
