--- a/public/tutorial/example/index.html
+++ b/public/tutorial/example/index.html
@@ -78,8 +78,8 @@ Tip 2 &hellip;">
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -93,9 +93,9 @@ Tip 2 &hellip;">
   <meta property="twitter:site" content="@alec_trusty">
   <meta property="twitter:creator" content="@alec_trusty">
   
-  <meta property="og:site_name" content="Alec Trusty">
+  <meta property="og:site_name" content="{ Alec Trusty }">
   <meta property="og:url" content="/tutorial/example/">
-  <meta property="og:title" content="Example Page | Alec Trusty">
+  <meta property="og:title" content="Example Page | { Alec Trusty }">
   <meta property="og:description" content="In this tutorial, I&rsquo;ll share my top 10 tips for getting started with Academic:
 Tip 1 &hellip;
 Tip 2 &hellip;">
@@ -114,7 +114,7 @@ Tip 2 &hellip;">
 
   
 
-  <title>Example Page | Alec Trusty</title>
+  <title>Example Page | { Alec Trusty }</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
@@ -123,7 +123,7 @@ Tip 2 &hellip;">
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">Alec Trusty</a>
+      <a class="navbar-brand" href="/">{ Alec Trusty }</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
