--- a/public/404.html
+++ b/public/404.html
@@ -76,8 +76,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -91,9 +91,9 @@
   <meta property="twitter:site" content="@alec_trusty">
   <meta property="twitter:creator" content="@alec_trusty">
   
-  <meta property="og:site_name" content="{ Alec Trusty }">
+  <meta property="og:site_name" content="Alec Trusty">
   <meta property="og:url" content="">
-  <meta property="og:title" content="404 Page not found | { Alec Trusty }">
+  <meta property="og:title" content="404 Page not found | Alec Trusty">
   <meta property="og:description" content="Alec Trusty | Environmental Data Scientist">
   
   
@@ -108,7 +108,7 @@
 
   
 
-  <title>404 Page not found | { Alec Trusty }</title>
+  <title>404 Page not found | Alec Trusty</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
@@ -117,7 +117,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">{ Alec Trusty }</a>
+      <a class="navbar-brand" href="/">Alec Trusty</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
