--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -76,8 +76,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -91,9 +91,9 @@
   <meta property="twitter:site" content="@alec_trusty">
   <meta property="twitter:creator" content="@alec_trusty">
   
-  <meta property="og:site_name" content="{ Alec Trusty }">
+  <meta property="og:site_name" content="Alec Trusty">
   <meta property="og:url" content="/privacy/">
-  <meta property="og:title" content="Privacy Policy | { Alec Trusty }">
+  <meta property="og:title" content="Privacy Policy | Alec Trusty">
   <meta property="og:description" content="&hellip;">
   
   
@@ -110,7 +110,7 @@
 
   
 
-  <title>Privacy Policy | { Alec Trusty }</title>
+  <title>Privacy Policy | Alec Trusty</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
@@ -119,7 +119,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">{ Alec Trusty }</a>
+      <a class="navbar-brand" href="/">Alec Trusty</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
