--- a/public/project/arctic-story-map/index.html
+++ b/public/project/arctic-story-map/index.html
@@ -76,8 +76,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -91,9 +91,9 @@
   <meta property="twitter:site" content="@alec_trusty">
   <meta property="twitter:creator" content="@alec_trusty">
   
-  <meta property="og:site_name" content="{ Alec Trusty }">
+  <meta property="og:site_name" content="Alec Trusty">
   <meta property="og:url" content="/project/arctic-story-map/">
-  <meta property="og:title" content="Story Map | Arctic Area-Based Management | { Alec Trusty }">
+  <meta property="og:title" content="Story Map | Arctic Area-Based Management | Alec Trusty">
   <meta property="og:description" content="A story map developed for the Circumpolar Conservation Union&#39;s website which describes the state of Area-Based Management of Arctic ecosystems.">
   
   
@@ -110,7 +110,7 @@
 
   
 
-  <title>Story Map | Arctic Area-Based Management | { Alec Trusty }</title>
+  <title>Story Map | Arctic Area-Based Management | Alec Trusty</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
@@ -119,7 +119,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">{ Alec Trusty }</a>
+      <a class="navbar-brand" href="/">Alec Trusty</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
