--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -78,8 +78,8 @@
   
 
   
-  <link rel="alternate" href="/publication_types/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
-  <link rel="feed" href="/publication_types/index.xml" type="application/rss+xml" title="{ Alec Trusty }">
+  <link rel="alternate" href="/publication_types/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="feed" href="/publication_types/index.xml" type="application/rss+xml" title="Alec Trusty">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -93,9 +93,9 @@
   <meta property="twitter:site" content="@alec_trusty">
   <meta property="twitter:creator" content="@alec_trusty">
   
-  <meta property="og:site_name" content="{ Alec Trusty }">
+  <meta property="og:site_name" content="Alec Trusty">
   <meta property="og:url" content="/publication_types/">
-  <meta property="og:title" content="Publication_types | { Alec Trusty }">
+  <meta property="og:title" content="Publication_types | Alec Trusty">
   <meta property="og:description" content="Alec Trusty | Environmental Data Scientist">
   
   
@@ -110,7 +110,7 @@
 
   
 
-  <title>Publication_types | { Alec Trusty }</title>
+  <title>Publication_types | Alec Trusty</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
@@ -119,7 +119,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">{ Alec Trusty }</a>
+      <a class="navbar-brand" href="/">Alec Trusty</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
