mas updated services

--- a/public/index.html
+++ b/public/index.html
@@ -396,7 +396,7 @@
 
   
   <div class="col-md-12">
-    <p>I&rsquo;m available as a freelance contractor offering a variety of services including: Custom static and dynamic map creation; Custom tools for automating geoprocessing tasks; Web-Mapping; Data creation, munging, and analysis; Web Scraping; Data dashboards and more!</p>
+    <p>I&rsquo;m available as a freelance contractor offering a variety of services, including but not limited to: Custom static and dynamic map creation; Custom tools for automating geoprocessing tasks; Database design and assembly; Web-Mapping; Data creation, munging, and analysis; Web Scraping; Data dashboards.</p>
   </div>
   
 
