removed example proj

--- a/public/404.html
+++ b/public/404.html
@@ -76,8 +76,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="alternate" href="https://www.alectrusty.com/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="feed" href="https://www.alectrusty.com/index.xml" type="application/rss+xml" title="Alec Trusty">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -98,7 +98,7 @@
   
   
     
-  <meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:image" content="https://www.alectrusty.com/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -265,10 +265,6 @@
 </div>
 <div class="container">
   <footer class="site-footer">
-  
-  <p class="powered-by">
-    <a href="/privacy/">Privacy Policy</a>
-  </p>
   
 
   <p class="powered-by">
