removed deep-learning from example-talk.md

--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Alec Trusty | Environmental Data Scientist">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://www.alectrusty.com/publication_types/">
+  <link rel="alternate" hreflang="en-us" href="/publication_types/">
 
   
 
@@ -78,15 +78,15 @@
   
 
   
-  <link rel="alternate" href="https://www.alectrusty.com/publication_types/index.xml" type="application/rss+xml" title="Alec Trusty">
-  <link rel="feed" href="https://www.alectrusty.com/publication_types/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="alternate" href="/publication_types/index.xml" type="application/rss+xml" title="Alec Trusty">
+  <link rel="feed" href="/publication_types/index.xml" type="application/rss+xml" title="Alec Trusty">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://www.alectrusty.com/publication_types/">
+  <link rel="canonical" href="/publication_types/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -94,13 +94,13 @@
   <meta property="twitter:creator" content="@alec_trusty">
   
   <meta property="og:site_name" content="Alec Trusty">
-  <meta property="og:url" content="https://www.alectrusty.com/publication_types/">
+  <meta property="og:url" content="/publication_types/">
   <meta property="og:title" content="Publication_types | Alec Trusty">
   <meta property="og:description" content="Alec Trusty | Environmental Data Scientist">
   
   
     
-  <meta property="og:image" content="https://www.alectrusty.com/img/icon-192.png">
+  <meta property="og:image" content="/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -239,6 +239,10 @@
 </div>
 <div class="container">
   <footer class="site-footer">
+  
+  <p class="powered-by">
+    <a href="/privacy/">Privacy Policy</a>
+  </p>
   
 
   <p class="powered-by">
