--- a/public/tutorial/example/index.html
+++ b/public/tutorial/example/index.html
@@ -30,7 +30,7 @@ Tip 2 &hellip;">
   
   
   
-  <meta name="theme-color" content="hsl(339, 90%, 68%)">
+  <meta name="theme-color" content="rgb(52, 186, 159)">
   
 
   
