Added New Custom Theme

--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -28,7 +28,7 @@
   
   
   
-  <meta name="theme-color" content="rgb(52, 186, 159)">
+  <meta name="theme-color" content="rgb(2, 155, 216)">
   
 
   
@@ -104,7 +104,7 @@
   <title>Recent &amp; Upcoming Talks | Alec Trusty</title>
 
 </head>
-<body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" class="dark">
+<body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
 
 <nav class="navbar navbar-light fixed-top navbar-expand-lg py-0" id="navbar-main">
   <div class="container">
